# info-search

./: pyproject.toml
info_search/01_crawler/: main.py
info_search/02_text_processing/: main.py
info_search/crawler_1/: main.py  services.py  user_agents.py
info_search/inverted_index_3/: index.py  main.py  nodes.py
info_search/search_engine_5/: main.py  search_engine.py  services.py
info_search/text_processing_2/: main.py
info_search/tf_idf_4/: idf.py  main.py  services.py  tf.py  tfidf.py
