[tool.poetry]
name = "info-search"
version = "0.1.0"
description = ""
authors = ["xenoturbellida <ElPGordeeva@stud.kpfu.ru>"]
readme = "README.md"
packages = [{include = "info_search"}]

[tool.poetry.dependencies]
python = "^3.11"
beautifulsoup4 = "^4.12.3"
requests = "^2.31.0"
nltk = "^3.8.1"
pymystem3 = "^0.2.0"
natasha = "^1.6.0"
tabulate = "^0.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
